* Changes from Dave Mills:
  Documentation updates.
  Fix a corner case where a frequency update was reported but not set.
  When LEAP_NOTINSYNC->LEAP_NOWARNING, call crypto_update() if we have
  crypto_flags.
(4.2.5p125) 2008/08/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1052] Add linuxPPS support to ONCORE driver.
(4.2.5p124) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Include (4.2.4p5) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 861] leap info was not being transmitted.
* [Bug 1046] refnumtoa.c is using the wrong header file.
* [Bug 1047] enable/disable options processing fix.
* header file cleanup.
* [Bug 1037] buffer in subroutine was 1 byte short.
* configure.ac: cleanup, add option for wintime, and lay the groundwork
  for the changes needed for bug 1028.
* Fixes from Dave Mills: 'bias' and 'interleave' work.  Separate
  phase and frequency discipline (for long poll intervals).  Update
  TAI function to match current leapsecond processing.
* Documentation updates from Dave Mills.
* [Bug 1037] Use all 16 of the MD5 passwords generated by ntp-keygen.
* Fixed the incorrect edge parameter being passed to time_pps_kcbind in
  NMEA refclock driver.
* [Bug 399] NMEA refclock driver does not honor time1 offset if flag3 set.
* [Bug 985] Modifications to NMEA reference clock driver to support Accord
  GPS Clock.
* poll time updates from Dave Mills.
* local refclock documentation updates from Dave Mills.
* [Bug 1022] Fix compilation problems with yesterday's commit.
* Updates and cleanup from Dave Mills:
  I've now spent eleven months of a sabbatical year - 7 days a week, 6-10
  hours most days - working on NTP. I have carefully reviewed every major
  algorithm, examined its original design and evolution from that design.
  I've trimmed off dead code and briar patches and did zillions of tests
  contrived to expose evil vulnerabilities. The development article is in